cleaned up spacing. Added comments

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - simple carousel LIVE DEMO</title>
+  <title>A Simple Carousel -  LIVE DEMO</title>
   <link rel="stylesheet" href="c/main.css">
   <script  src="j/main.js" defer></script>
 
